Exc5/base-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: base-policy
  namespace: development
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values:
          - front-end
          - back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values:
                  - front-end
                  - back-end-api
      ports:
        - protocol: TCP
          port: 80
